# weather

./: .build.yml  .gitignore  MANIFEST.in  flake.nix  location.py  locations.ini  module.nix  pyproject.toml  readme.md  ruff.toml  weather.py
static/: main.css
templates/: base.html  chart.js  weather.html
weather/: app.py  location.py  locations.ini
weather/templates/: chart.js
